@@ -1,10 +1,8 @@
 package ai.timefold.solver.core.preview.api.move.builtin;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.SoftAssertions.assertSoftly;
-
 import java.util.List;
 
+import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningEntityMetaModel;
 import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningVariableMetaModel;
 import ai.timefold.solver.core.preview.api.neighborhood.test.NeighborhoodTester;
 import ai.timefold.solver.core.testdomain.TestdataEntity;
@@ -27,130 +25,79 @@ class SwapMoveProviderTest {
     void univariate() {
         var solutionMetaModel = TestdataSolution.buildMetaModel();
         var entityMetaModel = solutionMetaModel.entity(TestdataEntity.class);
+        var variableMetaModel = solutionMetaModel.genuineEntity(TestdataEntity.class).basicVariable();
 
         var solution = TestdataSolution.generateSolution(2, 3);
         var e1 = solution.getEntityList().get(0);
         var e2 = solution.getEntityList().get(1);
         var e3 = solution.getEntityList().get(2);
-        var v1 = solution.getValueList().get(0);
-        var v2 = solution.getValueList().get(1);
 
         // With 3 entities, only 3 swap moves are possible: e1 <-> e2, e1 <-> e3, e2 <-> e3.
-        // But we only have 2 values, guaranteeing that two entities will share a value.
-        // Therefore there will only be 4 swap moves (including duplicates).
-        var moveList = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
-                .using(solution)
-                .getMovesAsList(move -> (SwapMove<TestdataSolution, TestdataEntity>) move);
-        assertThat(moveList).hasSize(4);
-
-        var move1 = moveList.get(0);
-        assertSoftly(softly -> {
-            softly.assertThat(move1.getPlanningEntities())
-                    .containsOnly(e1, e2);
-            softly.assertThat(move1.getPlanningValues())
-                    .containsOnly(v1, v2);
-        });
-
-        var move2 = moveList.get(1);
-        assertSoftly(softly -> {
-            softly.assertThat(move2.getPlanningEntities())
-                    .containsOnly(e1, e2);
-            softly.assertThat(move2.getPlanningValues())
-                    .containsOnly(v1, v2);
-        });
-
-        var move3 = moveList.get(2);
-        assertSoftly(softly -> {
-            softly.assertThat(move3.getPlanningEntities())
-                    .containsOnly(e2, e3);
-            softly.assertThat(move3.getPlanningValues())
-                    .containsOnly(v2, v1);
-        });
-
-        var move4 = moveList.get(3);
-        assertSoftly(softly -> {
-            softly.assertThat(move4.getPlanningEntities())
-                    .containsOnly(e2, e3);
-            softly.assertThat(move4.getPlanningValues())
-                    .containsOnly(v2, v1);
-        });
-
+        // But we only have 2 values, guaranteeing that two entities (e1 and e3) share a value,
+        // making that swap a no-op. Each remaining pair is produced in both directions,
+        // as swap(a, b) and swap(b, a) are distinct moves.
+        var context = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
+                .using(solution);
+        context.producesAllOf(
+                Moves.swap(variableMetaModel, e1, e2),
+                Moves.swap(variableMetaModel, e2, e1),
+                Moves.swap(variableMetaModel, e2, e3),
+                Moves.swap(variableMetaModel, e3, e2));
+        context.producesNoneOf(
+                Moves.swap(variableMetaModel, e1, e3), // No-op: e1 and e3 share a value.
+                Moves.swap(variableMetaModel, e3, e1));
     }
 
     @Test
     void multivariate() {
         var solutionMetaModel = TestdataMultiVarSolution.buildMetaModel();
         var entityMetaModel = solutionMetaModel.entity(TestdataMultiVarEntity.class);
+        var variableMetaModelList = allVariables(entityMetaModel);
 
         var solution = TestdataMultiVarSolution.generateSolution(3, 2, 2);
         var e1 = solution.getMultiVarEntityList().get(0);
         var e2 = solution.getMultiVarEntityList().get(1);
         var e3 = solution.getMultiVarEntityList().get(2);
-        var v1 = solution.getValueList().get(0);
-        var v2 = solution.getValueList().get(1);
-        var otherV1 = solution.getOtherValueList().get(0);
-        var otherV2 = solution.getOtherValueList().get(1);
 
         // With 3 entities, only 3 swap moves are possible: e1 <-> e2, e1 <-> e3, e2 <-> e3.
-        // But we only have 2 unique combinations of values, guaranteeing that two entities will share values.
-        // Therefore there will only be 4 swap moves (including duplicates).
-        var moveList = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
-                .using(solution)
-                .getMovesAsList(move -> (SwapMove<TestdataMultiVarSolution, TestdataMultiVarEntity>) move);
-        assertThat(moveList).hasSize(4);
-
-        var move1 = moveList.get(0);
-        assertSoftly(softly -> {
-            softly.assertThat(move1.getPlanningEntities())
-                    .containsOnly(e1, e2);
-            softly.assertThat(move1.getPlanningValues())
-                    .containsOnly(v1, v2, otherV1, otherV2);
-        });
-
-        var move2 = moveList.get(1);
-        assertSoftly(softly -> {
-            softly.assertThat(move2.getPlanningEntities())
-                    .containsOnly(e1, e2);
-            softly.assertThat(move2.getPlanningValues())
-                    .containsOnly(v1, v2, otherV1, otherV2);
-        });
-
-        var move3 = moveList.get(2);
-        assertSoftly(softly -> {
-            softly.assertThat(move3.getPlanningEntities())
-                    .containsOnly(e2, e3);
-            softly.assertThat(move3.getPlanningValues())
-                    .containsOnly(v2, v1, otherV2, otherV1);
-        });
-
-        var move4 = moveList.get(3);
-        assertSoftly(softly -> {
-            softly.assertThat(move4.getPlanningEntities())
-                    .containsOnly(e2, e3);
-            softly.assertThat(move4.getPlanningValues())
-                    .containsOnly(v2, v1, otherV2, otherV1);
-        });
+        // But we only have 2 unique combinations of values, guaranteeing that two entities (e1 and e3)
+        // share values, making that swap a no-op. Each remaining pair is produced in both directions.
+        var context = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
+                .using(solution);
+        context.producesAllOf(
+                Moves.swap(variableMetaModelList, e1, e2),
+                Moves.swap(variableMetaModelList, e2, e1),
+                Moves.swap(variableMetaModelList, e2, e3),
+                Moves.swap(variableMetaModelList, e3, e2));
+        context.producesNoneOf(
+                Moves.swap(variableMetaModelList, e1, e3), // No-op: e1 and e3 share values.
+                Moves.swap(variableMetaModelList, e3, e1));
     }
 
     @Test
     void pinnedEntitySkipped() {
         var solutionMetaModel = TestdataPinnedSolution.buildMetaModel();
         var entityMetaModel = solutionMetaModel.entity(TestdataPinnedEntity.class);
+        var variableMetaModel = solutionMetaModel.genuineEntity(TestdataPinnedEntity.class).basicVariable();
 
         var solution = TestdataPinnedSolution.generateSolution(2, 2);
-        solution.getEntityList().getFirst().setPinned(true);
+        var firstEntity = solution.getEntityList().get(0);
+        var secondEntity = solution.getEntityList().get(1);
+        firstEntity.setPinned(true);
 
         // With only 2 entities and one pinned, there is no valid swap partner.
-        var moveList = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
+        NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
                 .using(solution)
-                .getMovesAsList();
-        assertThat(moveList).isEmpty();
+                .producesNoneOf(
+                        Moves.swap(variableMetaModel, firstEntity, secondEntity),
+                        Moves.swap(variableMetaModel, secondEntity, firstEntity));
     }
 
     @Test
     void fromEntity() {
         var solutionMetaModel = TestdataEntityProvidingSolution.buildMetaModel();
         var entityMetaModel = solutionMetaModel.entity(TestdataEntityProvidingEntity.class);
+        var variableMetaModel = solutionMetaModel.genuineEntity(TestdataEntityProvidingEntity.class).basicVariable();
 
         var v1 = new TestdataValue("v1");
         var v2 = new TestdataValue("v2");
@@ -164,25 +111,18 @@ class SwapMoveProviderTest {
         var solution = new TestdataEntityProvidingSolution("s1");
         solution.setEntityList(List.of(e1, e2, e3));
 
-        // e1(v1, range={v1,v2}) ↔ e2(v2, range={v1,v2}): valid swap; produced twice.
-        // e1 ↔ e3: v3 not in e1's range → excluded.
-        // e2 ↔ e3: v3 not in e2's range → excluded.
-        var moveList = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
-                .using(solution)
-                .getMovesAsList(move -> (SwapMove<TestdataEntityProvidingSolution, TestdataEntityProvidingEntity>) move);
-        assertThat(moveList).hasSize(2);
-
-        var move0 = moveList.get(0);
-        assertSoftly(softly -> {
-            softly.assertThat(move0.getPlanningEntities()).containsOnly(e1, e2);
-            softly.assertThat(move0.getPlanningValues()).containsOnly(v1, v2);
-        });
-
-        var move1 = moveList.get(1);
-        assertSoftly(softly -> {
-            softly.assertThat(move1.getPlanningEntities()).containsOnly(e1, e2);
-            softly.assertThat(move1.getPlanningValues()).containsOnly(v1, v2);
-        });
+        // e1(v1, range={v1,v2}) <-> e2(v2, range={v1,v2}): valid swap, produced in both directions.
+        // e1 <-> e3, e2 <-> e3: v3 not in e1/e2's range, and v1/v2 not in e3's range -> excluded.
+        var context = NeighborhoodTester.build(new SwapMoveProvider<>(entityMetaModel), solutionMetaModel)
+                .using(solution);
+        context.producesAllOf(
+                Moves.swap(variableMetaModel, e1, e2),
+                Moves.swap(variableMetaModel, e2, e1));
+        context.producesNoneOf(
+                Moves.swap(variableMetaModel, e1, e3),
+                Moves.swap(variableMetaModel, e3, e1),
+                Moves.swap(variableMetaModel, e2, e3),
+                Moves.swap(variableMetaModel, e3, e2));
     }
 
     @Test
@@ -194,14 +134,30 @@ class SwapMoveProviderTest {
                 .map(v -> (PlanningVariableMetaModel<TestdataMultiVarSolution, TestdataMultiVarEntity, Object>) v)
                 .toList();
         var solution = TestdataMultiVarSolution.generateSolution(3, 1, 2);
+        var e1 = solution.getMultiVarEntityList().get(0);
+        var e2 = solution.getMultiVarEntityList().get(1);
+        var e3 = solution.getMultiVarEntityList().get(2);
 
         // With 3 entities, only 3 swap moves are possible: e1 <-> e2, e1 <-> e3, e2 <-> e3.
         // We only have 1 value for primary and secondary variables,
-        // therefore with the tertiary variable excluded, there will be no swap moves.
-        var moveList = NeighborhoodTester.build(new SwapMoveProvider<>(allowedVariableMetaModels), solutionMetaModel)
+        // therefore with the tertiary variable excluded, there will be no swap moves, in either direction.
+        NeighborhoodTester.build(new SwapMoveProvider<>(allowedVariableMetaModels), solutionMetaModel)
                 .using(solution)
-                .getMovesAsList(move -> (SwapMove<TestdataMultiVarSolution, TestdataMultiVarEntity>) move);
-        assertThat(moveList).isEmpty();
+                .producesNoneOf(
+                        Moves.swap(allowedVariableMetaModels, e1, e2),
+                        Moves.swap(allowedVariableMetaModels, e2, e1),
+                        Moves.swap(allowedVariableMetaModels, e1, e3),
+                        Moves.swap(allowedVariableMetaModels, e3, e1),
+                        Moves.swap(allowedVariableMetaModels, e2, e3),
+                        Moves.swap(allowedVariableMetaModels, e3, e2));
+    }
+
+    @SuppressWarnings("unchecked")
+    private static List<PlanningVariableMetaModel<TestdataMultiVarSolution, TestdataMultiVarEntity, Object>> allVariables(
+            PlanningEntityMetaModel<TestdataMultiVarSolution, TestdataMultiVarEntity> entityMetaModel) {
+        return entityMetaModel.variables().stream()
+                .map(v -> (PlanningVariableMetaModel<TestdataMultiVarSolution, TestdataMultiVarEntity, Object>) v)
+                .toList();
     }
 
 }
